tests/purs/failing/IntToString3.out
Error found:
in module [33mMain[0m
at tests/purs/failing/IntToString3.purs:14:16 - 14:47 (line 14, column 16 - line 14, column 47)

  Could not match type
  [33m     [0m
  [33m  "0"[0m
  [33m     [0m
  with type
  [33m     [0m
  [33m  "a"[0m
  [33m     [0m

while solving type class constraint
[33m                       [0m
[33m  Prim.Int.ToString 0  [0m
[33m                    "a"[0m
[33m                       [0m
while applying a function [33mtestToString[0m
  of type [33mToString t0 t1 => Proxy @Int t0 -> Proxy @Symbol t1[0m
  to argument [33mProxy[0m
while checking that expression [33mtestToString Proxy[0m
  has type [33mProxy @Symbol "a"[0m
in value declaration [33mzeroToString[0m

where [33mt0[0m is an unknown type
      [33mt1[0m is an unknown type

See https://github.com/purescript/documentation/blob/master/errors/TypesDoNotUnify.md for more information,
or to contribute content related to this error.

